package sample.interfaces;

public interface Observer {
    void update();
}
