package sample.main;

public enum TypeOfButton {
    NEW_GAME, EXIT
}
