package sample.maps;

public enum TypeOfTitle {
    WALL,BRICK,FLOOR,FIRE
}
