package sample.player;

public enum Direction {
    UP,DOWN,LEFT,RIGHT,STANDING
}
