@startuml

title __BOMBERMAN's Class Diagram__\n

  namespace sample.bomb {
    class sample.bomb.Bomb {
    }
  }
  

  namespace sample.game {
    class sample.game.Game {
    }
  }
  

  namespace sample.interfaces {
    interface sample.interfaces.Observable {
    }
  }
  

  namespace sample.interfaces {
    interface sample.interfaces.Observer {
    }
  }
  

  namespace sample.main {
    class sample.main.Main {
    }
  }
  

  namespace sample.main {
    class sample.main.Menu {
    }
  }
  

  namespace sample.main {
    class sample.main.MenuObserver {
    }
  }
  

  namespace sample.main {
    enum TypeOfButton {
    }
  }
  

  namespace sample.maps {
    class sample.maps.Map {
    }
  }
  

  namespace sample.maps {
    class sample.maps.MapObserver {
    }
  }
  

  namespace sample.maps {
    class sample.maps.MapReader {
    }
  }
  

  namespace sample.maps {
    class sample.maps.Title {
    }
  }
  

  namespace sample.maps {
    enum TypeOfTitle {
    }
  }
  

  namespace sample.player {
    enum Direction {
    }
  }
  

  namespace sample.player {
    class sample.player.Player {
    }
  }
  

  sample.game.Game .up.|> javafx.fxml.Initializable
  sample.game.Game o-- sample.maps.MapObserver : mapObserver
  sample.main.Main -up-|> javafx.application.Application
  sample.main.Menu .up.|> javafx.fxml.Initializable
  sample.main.Menu .up.|> sample.interfaces.Observable
  sample.main.MenuObserver .up.|> sample.interfaces.Observer
  sample.maps.Map .up.|> sample.interfaces.Observable
  sample.maps.MapObserver .up.|> sample.interfaces.Observer
  sample.maps.Title -up-|> javafx.scene.Node
  sample.maps.Title o-- sample.maps.TypeOfTitle : typeOfTitle
  sample.player.Player o-- sample.player.Direction : direction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
